feat: configure discovery stages and harden file operations